# lrcmd

./: .gitignore  API.rst  HISTORY.rst  Makefile  README.rst  lrcmd.log.txt  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst
lrcmd/: __init__.py  commands.py  core.py  exceptions.py  local.py  postprocessors.py  remote.py
tests/: __init__.py  test_local.py  test_lrcmd.py  test_remote.py
tests/data/: test_succeeds_the_second_time.sh
