[tool.poetry]
name = "lrcmd"
version = "0.0.0"
description = "Unified interface for local and remote system commands."
authors = ["Engelbert Tijskens <engelbert.tijskens@uantwerpen.be>"]
license = "MIT"

readme = 'README.rst'

repository = "https://github.com/etijskens/lrcmd"
homepage = "https://github.com/etijskens/lrcmd"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
cookiecutter = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^4.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
#my-script = 'my_package:main'
